Add guess capital city from country game mode

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -241,13 +241,14 @@
   },
   "game": {
     "alerts": {
-      "success": "Correcte!",
+      "success": "Correct!",
       "wrong": "That's not it, try again",
       "oops": "Oops!",
       "correctAnswer": "The answer was: "
     },
-    "answer":{
-      "placeholder": "Type in the country name"
+    "answer": {
+      "placeholder": "Type in the country name",
+      "city_placeholder": "Typ in the city name"
     },
     "submit": "Submit",
     "skip": "skip"
