Add success Rate card in stats

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -266,6 +266,7 @@
     "maxStreakDescription": "The maximum number of streaks in one game",
     "successRate": "% of success",
     "maxFails": "Most failed",
-    "maxCorrect": "Most correctly guessed"
+    "maxCorrect": "Most correctly guessed",
+    "successRateTitle": "Success rate"
   }
 }
