--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -159,7 +159,9 @@
       "cities": {
         "title": "Cities",
         "description": "Test your knowledge about capital cities."
-      }
+      },
+      "training": "Training mode",
+      "challenge": "Challenge mode"
     }
   },
   "emailConfirm": {
@@ -268,5 +270,20 @@
     "maxFails": "Most failed",
     "maxCorrect": "Most correctly guessed",
     "successRateTitle": "Success rate"
+  },
+  "score": {
+    "streak": "Steak"
+  },
+  "popup": {
+    "gameOver": {
+      "yourScore": "Your score:",
+      "title": "Game over",
+      "correctAnswer": "The correct answer was",
+      "encouragement": "Try again and beat your score. 💪",
+      "retry": "Retry",
+      "share": "Share result",
+      "copied": "Copied!",
+      "bestStreak": "Best streak:"
+    }
   }
 }
