--- a/src/i18n/locales/fr/translation.json
+++ b/src/i18n/locales/fr/translation.json
@@ -252,7 +252,8 @@
     },
     "submit": "Valider",
     "skip": "Passer",
-    "loadingQuestions": "Chargement…"
+    "loadingQuestions": "Chargement…",
+    "skipTooltip": "Utilisez le raccourci Shift + Entrer pour passer"
   },
   "stats": {
     "pageTitle": "Vos statistiques détaillées",
