Prevent answer validation when answer is empty

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -263,7 +263,11 @@
     "submit": "Submit",
     "skip": "skip",
     "loadingQuestions": "Loading…",
-    "skipTooltip": "Use shiftKey + Enter shortcut to skip"
+    "skipTooltip": "Use shiftKey + Enter shortcut to skip",
+    "error": {
+      "invalidCountry": "Please select a valid country",
+      "invalidCity": "Please select a valid city"
+    }
   },
   "stats": {
     "pageTitle": "Your detailed stats",
