--- a/src/i18n/locales/fr/translation.json
+++ b/src/i18n/locales/fr/translation.json
@@ -253,7 +253,7 @@
     },
     "answer": {
       "placeholder": "Entrez le nom du pays",
-      "city_placeholder": "Entrez le nom de la capitale"
+      "cityPlaceholder": "Entrez le nom de la capitale"
     },
     "submit": "Valider",
     "skip": "Passer",
